dashboards/phpmyadmin/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: phpmyadmin
    app.kubernetes.io/name: phpmyadmin
    app.kubernetes.io/part-of: dashboard
  name: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: phpmyadmin
      app.kubernetes.io/name: phpmyadmin
      app.kubernetes.io/part-of: dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/component: phpmyadmin
        app.kubernetes.io/name: phpmyadmin
        app.kubernetes.io/part-of: dashboard
    spec:
      automountServiceAccountToken: false
      containers:
      - name: phpmyadmin
        image: phpmyadmin:latest
        ports:
        - name: http
          containerPort: 80
        resources:
          limits:
            cpu: 1000m
            memory: 2G
          requests:
            cpu: 50m
            memory: 32Mi
