dashboards/phpmyadmin/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: phpmyadmin
    app.kubernetes.io/name: service
    app.kubernetes.io/part-of: dashboard
  name: phpmyadmin
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app.kubernetes.io/component: phpmyadmin
    app.kubernetes.io/name: phpmyadmin
    app.kubernetes.io/part-of: dashboard
  type: ClusterIP
